import add time parse

--- a/yamlExcel/src/main/resources/auth/user.yaml
+++ b/yamlExcel/src/main/resources/auth/user.yaml
@@ -21,4 +21,5 @@ candyFields:
     type: String
   - fieldName: createdAt
     title: 创建时间
-    type: String
+    type: Date
+    timeFormat: "yyyyMMdd HHmmss"
